--- a/MainPage.css
+++ b/MainPage.css
@@ -18,10 +18,9 @@ body {
 
 header {
     align-items: center;
-    background-color: #97d5e0;
+    background-color: rgba(146, 219, 232, 1);
     -webkit-backdrop-filter: blur(5px);
     backdrop-filter: blur(5px);
-    backdrop-filter: blur(100px);
     display: flex;
     justify-content: center;
     position: fixed;
@@ -47,7 +46,7 @@ nav ul li {
 }
 
 nav ul li a {
-    background: #97d5e0;
+    background: rgba(146, 219, 232, 1);
     border-radius: 12px;
     color: #000;
     padding: 7px;
@@ -265,8 +264,8 @@ nav ul li a:hover {
 }
 
 .form input {
-    border: solid 2px;
-    border-radius: 8px;
+    border: none;
+    border-bottom: 1px solid #000;
     padding: 8px;
     margin: 3px 0;
     width: 86%;
