--- a/MainPage.css
+++ b/MainPage.css
@@ -4,21 +4,12 @@
 }
 
 body {
-    background: #ffffff;
-}
-
-.bg {
-    background: #ffffff;
-    background: linear-gradient(180deg, rgba(255, 255, 255, 1) 0%, rgba(245, 245, 245, 1) 67%, rgba(146, 219, 232, 1) 100%);
-    height: 100vh;
-    position: absolute;
-    width: 100vw;
-    z-index: -2;
+    background-image: url(Assets/anime\ collage\ luffy.jpg);
 }
 
 header {
     align-items: center;
-    background-color: rgba(146, 219, 232, 1);
+    background-color: rgba(146, 219, 232, 0.7);
     -webkit-backdrop-filter: blur(5px);
     backdrop-filter: blur(5px);
     display: flex;
@@ -46,7 +37,6 @@ nav ul li {
 }
 
 nav ul li a {
-    background: rgba(146, 219, 232, 1);
     border-radius: 12px;
     color: #000;
     padding: 7px;
@@ -128,9 +118,21 @@ nav ul li a:hover {
     width: 100%;
 }
 
-.content h1 {
+.containerText {
+    align-items: center;
+    background-color: rgba(255, 255, 255, 0.7);
+    border-radius: 12px;
+    -webkit-backdrop-filter: blur(5px);
+    backdrop-filter: blur(5px);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 10px 34px;
+}
+
+.containerText h1 {
     font-family: 'Goldman';
-    font-size: 2.6em;
+    font-size: 2.4em;
 }
 
 .container {
@@ -195,12 +197,16 @@ nav ul li a:hover {
     display: flex;
     margin-top: 30px;
 }
+
 /* Content End */
 
 /* Section LoginAs */
 .loginAs {
     align-items: center;
     background: rgba(146, 219, 232, 1);
+    box-shadow: -2px -27px 58px 0px rgba(0, 0, 0, 0.76);
+    -webkit-box-shadow: -2px -27px 58px 0px rgba(0, 0, 0, 0.76);
+    -moz-box-shadow: -2px -27px 58px 0px rgba(0, 0, 0, 0.76);
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -255,7 +261,8 @@ nav ul li a:hover {
     text-align: center;
 }
 
-.form .submit, .form p {
+.form .submit,
+.form p {
     margin-top: 8px;
 }
 
