--- a/MainPage.css
+++ b/MainPage.css
@@ -9,7 +9,7 @@ body {
 
 header {
     align-items: center;
-    background-color: rgba(146, 219, 232, 0.7);
+    background-color: rgba(0, 183, 255, 0.7);
     -webkit-backdrop-filter: blur(5px);
     backdrop-filter: blur(5px);
     display: flex;
@@ -38,7 +38,7 @@ nav ul li {
 
 nav ul li a {
     border-radius: 12px;
-    color: #000;
+    color: #ffffff;
     padding: 7px;
     text-decoration: none;
     transition: .4s;
@@ -203,7 +203,7 @@ nav ul li a:hover {
 /* Section LoginAs */
 .loginAs {
     align-items: center;
-    background: rgba(146, 219, 232, 1);
+    background: rgb(255, 255, 255);
     box-shadow: -2px -27px 58px 0px rgba(0, 0, 0, 0.76);
     -webkit-box-shadow: -2px -27px 58px 0px rgba(0, 0, 0, 0.76);
     -moz-box-shadow: -2px -27px 58px 0px rgba(0, 0, 0, 0.76);
@@ -234,6 +234,7 @@ nav ul li a:hover {
     box-shadow: 12px 13px 18px -8px rgba(0, 0, 0, 0.75);
     -webkit-box-shadow: 12px 13px 18px -8px rgba(0, 0, 0, 0.75);
     -moz-box-shadow: 12px 13px 18px -8px rgba(0, 0, 0, 0.75);
+    border: 1px solid #000;
     border-radius: 18px;
     display: flex;
     justify-content: center;
@@ -293,6 +294,15 @@ nav ul li a:hover {
     cursor: pointer;
     color: #ffffff;
     padding: 8px 12px;
+}
+
+footer {
+    background: #ffffff;
+    display: flex;
+    font-family: Arial, Helvetica, sans-serif;
+    justify-content: center;
+    padding: 24px 0;
+    width: 100vw;
 }
 
 /* LoginAs End */
